# advent_of_code_2024

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: github_ci.yml  linux.yml
app/: CMakeLists.txt  main.cpp
app/day1/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  advent_2024_lib.hpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  read_delim_file.cpp  utilities.cpp
test/: CMakeLists.txt  test-day1.cpp  test-day2.cpp  test-day3.cpp  test-day4.cpp  test-day5.cpp
